--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -77,7 +77,7 @@
                             <thead>
                             <tr>
                                 <th colspan="6" class="text-center">
-                                    <a href="{{ path('app_path_read', {'idOC': path.idOC}) }}">
+                                    <a href="{{ path('app_path_read', {'id': path.id}) }}">
                                         {{ path.name }}
                                     </a>
                                 </th>
