--- a/templates/student/read.html.twig
+++ b/templates/student/read.html.twig
@@ -80,7 +80,7 @@
                     <thead>
                     <tr>
                         <th colspan="3" class="text-center">
-                            <a href="{{ path('app_path_read', {'idOC': student.path.idOC}) }}">
+                            <a href="{{ path('app_path_read', {'id': student.path.id}) }}">
                                 {{ student.path.name }}
                             </a>
                         </th>
